feat(diagnostics): added allow `empty_if` to selene and allow `_*` for unused to `lua_ls`

--- a/selene.toml
+++ b/selene.toml
@@ -8,3 +8,4 @@ incorrect_standard_library_use = "allow" # This is for cases like `string.format
 mixed_table = "allow"
 unused_variable = "warn"
 undefined_variable = "warn"
+empty_if = "allow"
